@@ -75,6 +75,10 @@ for my $binary_control (@binary_controls) {
 	tag "build-info-in-binary-control-file-section", "Package ".$binary_control->{"package"}
 	    if ($binary_control->{"build-depends"} || $binary_control->{"build-depends-indep"} ||
 	        $binary_control->{"build-conflicts"} || $binary_control->{"build-conflicts-indep"});
+	for my $field (keys %$binary_control) {
+		tag 'binary-control-field-duplicates-source', $field, "in package ".$binary_control->{'package'},
+		    if ($header->{$field} && $binary_control->{$field} eq $header->{$field});
+	}
 }
 
 # Make sure that a stronger dependency field doesn't imply any of the elements
