@@ -34,6 +34,15 @@ Info: One of the paragraphs of your debian/control contains the same
  field more than once. This can lead to an unexpected behaviour of dpkg
  and apt.
 
+Tag: binary-control-field-duplicates-source
+Severity: wishlist
+Certainty: certain
+Info: In <tt>debian/control</tt>, this field for a binary package
+ duplicates the value inherited from the source package paragraph.  This
+ doesn't hurt anything, but you may want to take advantage of the
+ inheritance and set the value in only one place.  It prevents missing
+ duplicate places that need to be fixed if the value ever changes.
+
 Tag: debian-control-file-is-a-symlink
 Severity: normal
 Certainty: certain
