@@ -1,0 +1,19 @@
+Source: {$srcpkg}
+Priority: extra
+Maintainer: {$author}
+Standards-Version: 3.8.0
+Build-Depends: debhelper (>= 7)
+X-VCS-Svn: svn://svn.example.com/{$srcpkg}/trunk
+
+Package: {$srcpkg}
+Section: {$section}
+Maintainer: {$author}
+Build-Conflicts: foo
+Architecture: {$architecture}
+Depends: {$srcpkg}, foo, baz, $\{shlibs:Depends\}, $\{misc:Depends\}
+Recommends: foo, bar
+Suggests: bar | baz
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
