@@ -1,0 +1,7 @@
+E: control-file-general source: build-info-in-binary-control-file-section Package control-file-general
+I: control-file-general source: binary-control-field-duplicates-source maintainer in package control-file-general
+W: control-file-general source: no-section-field-for-source
+W: control-file-general source: package-depends-on-itself control-file-general depends
+W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> recommends foo
+W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> suggests bar | baz
+W: control-file-general source: stronger-dependency-implies-weaker control-file-general recommends -> suggests bar | baz
